--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST = localhost
-DB_PORT = 5432
+DB_PORT = 5430
 DB_PASS = postgres
 DB_USER = postgres
-DB_NAME = shopping
-DB_SSLMODE = disabledS
+DB_NAME = FDSAP-INTERN7
+DB_SSLMODE = disable
